@@ -17,8 +17,6 @@
 
 open Format
 
-val init : unit -> unit
-
 val loadfile : formatter -> string -> unit
 val install_printer : formatter -> Longident.t -> unit
 val remove_printer : Longident.t -> unit
